--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,3 +8,5 @@ axum = "0.8.4"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tokio = { version = "1.45.0", features = ["full"] }
+chromadb = { version = "2.2.2", features = ["openai"] }
+anyhow = "1"
