--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,3 +10,4 @@ serde_json = "1.0.140"
 tokio = { version = "1.45.0", features = ["full"] }
 chromadb = { version = "2.2.2", features = ["openai"] }
 anyhow = "1"
+color-eyre = "0.6"
