--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,11 +6,7 @@ edition = "2024"
 [dependencies]
 axum = "0.8.4"
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
 tokio = { version = "1.45.0", features = ["full"] }
-pyo3 = { version = "0.25.0", features = ["auto-initialize"] }
-pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
-once_cell = "1"
+reqwest = { version = "0.11", features = ["json"] }
 anyhow = "1"
 color-eyre = "0.6"
-libc = "0.2"
