--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@heroui/theme": "2.4.9",
     "@react-aria/ssr": "3.9.7",
     "@react-aria/visually-hidden": "3.8.19",
+    "class-variance-authority": "^0.7.1",
     "clsx": "2.1.1",
     "dayjs": "^1.11.13",
     "framer-motion": "11.13.1",
@@ -46,6 +47,7 @@
     "remark-math": "^6.0.0",
     "sugar-high": "^0.9.3",
     "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "toml": "^3.0.0"
   },
   "devDependencies": {
