--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,3 +10,9 @@ tokio = { version = "1.45.0", features = ["full"] }
 reqwest = { version = "0.12.19", features = ["json"] }
 anyhow = "1"
 color-eyre = "0.6"
+redis = { version = "0.32", features = [
+    "tokio-comp",
+    "cluster-async",
+    "connection-manager",
+] }
+toml = "0.8.23"
