--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 axum = "0.8.4"
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1"
 tokio = { version = "1.45.0", features = ["full"] }
 reqwest = { version = "0.12.19", features = ["json"] }
 anyhow = "1"
