--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-unused-imports": "4.1.4",
     "postcss": "8.4.49",
     "prettier": "3.3.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "tailwind-variants": "0.3.0",
     "tailwindcss": "3.4.16",
