--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,13 +43,13 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "15.0.4",
     "@react-types/shared": "3.25.0",
+    "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.11.0",
     "@typescript-eslint/parser": "8.11.0",
-    "autoprefixer": "10.4.19",
     "eslint": "^9.29.0",
     "eslint-config-next": "15.0.4",
     "eslint-config-prettier": "10.1.5",
@@ -65,7 +65,7 @@
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "tailwind-variants": "0.3.0",
-    "tailwindcss": "3.4.16",
+    "tailwindcss": "4.1.10",
     "typescript": "5.6.3"
   },
   "pnpm": {
