--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -11,6 +11,9 @@ tokio = { version = "1.45.0", features = ["full"] }
 reqwest = { version = "0.12.19", features = ["json"] }
 anyhow = "1"
 color-eyre = "0.6"
+thiserror = "1"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["fmt"] }
 percent-encoding = "2"
 redis = { version = "0.32", features = ["tokio-comp", "cluster-async", "connection-manager"] }
 toml = "0.8.23"
