--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -4,24 +4,28 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = "0.8.4"
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1"
-tokio = { version = "1.45.0", features = ["full"] }
-reqwest = { version = "0.12.19", features = ["json"] }
-anyhow = "1"
-color-eyre = "0.6"
-thiserror = "1"
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["fmt"] }
-percent-encoding = "2"
-redis = { version = "0.32", features = ["tokio-comp", "cluster-async", "connection-manager"] }
-toml = "0.8.23"
+axum = "^0.8"
+serde = { version = "^1.0", features = ["derive"] }
+serde_json = "^1.0"
+tokio = { version = "^1.45", features = ["full"] }
+reqwest = { version = "^0.12", features = ["json"] }
+anyhow = "^1.0"
+color-eyre = "^0.6"
+thiserror = "^1.0"
+tracing = "^0.1"
+tracing-subscriber = { version = "^0.3", features = ["fmt"] }
+percent-encoding = "^2.0"
+redis = { version = "^0.32", features = [
+    "tokio-comp",
+    "cluster-async",
+    "connection-manager",
+] }
+toml = "^0.8"
+tantivy = "^0.22"
 fuse-lib = { path = "../fuse" }
-tower = "0.5.2"
-tower-http = { version = "0.5", features = ["trace"] }
+tower = "^0.5"
+tower-http = { version = "^0.5", features = ["trace"] }
 
 [[bin]]
 name = "shinnku-com-backend"
 path = "src/main.rs"
-
