--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -3,6 +3,9 @@ name = "shinnku-com-backend"
 version = "0.1.0"
 edition = "2024"
 
+[lints]
+workspace = true
+
 [dependencies]
 axum = "^0.8"
 serde = { version = "^1.0", features = ["derive"] }
