--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -32,3 +32,7 @@ tower-http = { version = "^0.5", features = ["trace"] }
 [[bin]]
 name = "shinnku-com-backend"
 path = "src/main.rs"
+
+[lib]
+name = "shinnku_com_backend"
+path = "src/lib.rs"
