--- a/ai/pyproject.toml
+++ b/ai/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "hatchling.build"
 name = "shinnku-com-ai"
 version = "0.1.0"
 description = "AI components for shinnku-com project"
-readme = "README.md"
+readme = "../README.md"
 requires-python = ">=3.10"
 license = { text = "MIT" }
 authors = [{ name = "shinnku-nikaidou" }]
