feat(api): add download URL generation for Cloudflare R2 with presigned URLs
- Implemented a new route for generating presigned download URLs for files stored in Cloudflare R2.
- Added path mapping for specific file structures (e.g., galgame0).
- Included error handling for missing paths, file not found, and access denied scenarios.
- Configured S3 client with necessary credentials and endpoint for R2.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@aws-sdk/client-s3": "^3.879.0",
+    "@aws-sdk/s3-request-presigner": "^3.879.0",
     "@bprogress/next": "^3.2.12",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.12",
